=============================== 
IvyAddons 5010000 Release Notes 
===============================
First official release version of the IvyAddons for ivy 5.1.

* Issue #25095: Filemanager - oracle db. The security version is not detected properly, a a consequence the new security rights are ignored.
* Issue #25096: Filemanager: Fix security feature activated
  - files listed in recursive mode, the files the user can edit appears as read-only files.
  - security version 2, user cannot rename files if he has the file update right and not write parent right.
  - security version 2, user cannot paste files if he has the file create right and not write parent right.
* Issue #25097: Filemanager-HTML Thumbnailer new version. Improvement of the thumbnailing with different images sizes. icepdf jar in the thumbnailer lib.
* Issue #33769: Start Filemanager with max upload size less than 1024 Kb. 
The max size filtering works fine, but the warning message shown to the user indicates a wrong max value: 
it shows the bytes max values and not the Kb. 



=============================== 
IvyAddons 5001100 Release Notes 
===============================
* Issue #24937: Filemanager with Oracle DB - NPE if file has 0 byte
* Issue #24938: Filemanager directory translation feature - the directories are displayed without translation after calling the RDC setServerPath method.
* Issue #24946: Filemanager Oracle Db - Directory translation activated. Rename directory function throws NPE if the directory has no translation in the user language.
* Issue #24947: Filemanager PostgreSQL version 9.0 and below - files stored on the server file system. SQL Exception "unterminated quoted String at or near "'\'" if path contains "_" char
* Issue #24951: IvyAddons - FileListTable RDC Pb with Scrollbar after resizing the window. The scrollbar will not be displayed as needed.

New: presence of a pom.xml for maven build.

=============================== 
IvyAddons 5001000 Release Notes 